# mdip_dashApp

./: .gitignore  pyproject.toml  readme.md
src/: main.py  utils.py
src/assets/css/: style.css
src/pages/: about.py  homepage.py  job-market.py  salaries.py  time_trends.py
