[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdip-semestral-project"
version = "0.1.0"
description = "Data science project for MDIP class"
authors = [{ name = "Radomila Hejhalová", email = "hejhalova.radomila@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "numpy",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "pdoc",
]

[project.scripts]
dashboard = "src.main:main"
